Create enrolUser service of Moodle
